@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.1789 2004/05/28 15:07:46 wiz Exp $
+$NetBSD: TODO,v 1.1790 2004/05/28 16:40:34 minskim Exp $
 
 Suggested new packages
 ======================
@@ -200,7 +200,6 @@ Suggested package updates
 	o dmalloc-5.3.0
 	o dnetc-2.9004-482 [pkg/22390]
 	o docbook-4.3
-	o docbook-simple-1.1b2
 	o dovecot-0.99.10.5
 	o dvd+rw-tools-5.19-1.4.9.7 [pkg/25433]
 	o dvdrip-0.50.18
