@@ -1,13 +1,12 @@
-# $NetBSD: Makefile,v 1.6 2004/04/27 20:53:34 jmmv Exp $
+# $NetBSD: Makefile,v 1.7 2004/05/28 16:40:34 minskim Exp $
 #
 
-DISTNAME=	docbook-simple-1.1b1
-PKGREVISION=	1
+DISTNAME=	docbook-simple-1.1b3
 CATEGORIES=	textproc
-MASTER_SITES=	http://docbook.org/xml/simple/1.1b1/
+MASTER_SITES=	http://docbook.org/xml/simple/1.1b3/
 EXTRACT_SUFX=	.zip
 
-MAINTAINER=	minskim@bawi.org
+MAINTAINER=	minskim@NetBSD.org
 HOMEPAGE=	http://docbook.org/xml/simple/
 COMMENT=	Simplified DocBook XML DTD
 
@@ -24,13 +23,15 @@ DTDFILES=	sdbcent.mod sdocbook-custom.dtd sdocbookref-custom.dtd \
 		sinclist.mod
 MISCFILES=	sdocbook.css
 
-XML_CATALOGS=	${DTDDIR}/catalog
+XML_ENTRIES=	public "-//OASIS//DTD Simplified DocBook XML V1.1b3//EN" \
+		${PREFIX}/share/xml/docbook-simple/sdocbook.dtd
+XML_ENTRIES+=	public "-//OASIS//DTD Simplified DocBook RefEntry XML V1.1b3//EN" \
+		${PREFIX}/share/xml/docbook-simple/sdocbookref.dtd
 
 do-install:
 	${INSTALL_DATA_DIR} ${DTDDIR}
 	(cd ${WRKSRC}; ${INSTALL_DATA} ${DTDFILES} ${DTDDIR})
 	(cd ${WRKSRC}; ${INSTALL_DATA} ${MISCFILES} ${DTDDIR})
-	${INSTALL_DATA} ${FILESDIR}/catalog ${DTDDIR}/catalog
 
 .include "../../textproc/xmlcatmgr/catalogs.mk"
 .include "../../mk/bsd.pkg.mk"
